--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "dotenv -e .env.development -- nodemon index.js",
-    "start": "dotenv -e .env.production -- node index.js"
+    "start": "dotenv -e .env.production -- node index.js",
+    "prisma:migrate": "dotenv -e .env.development -- npx prisma migrate dev"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
